Tests/CompilerTests/negative/recursive-implicit-deinit.hylo
struct S is Deinitializable {
  let x: Int
  memberwise init
  fun deinit() sink {}
}

public fun main() {
  _ = S(x: 1)
}
