Tests/CompilerTests/negative/recursive-implicit-deinit.diagnostics.expected
negative/recursive-implicit-deinit.hylo:4.22: error: implicit deinitialization of instances of 'S' causes infinite recursion in this context
  fun deinit() sink {}
                     ^
